2024-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/r2k/setjmp.s
	  device/lib/r2ka/setjmp.s
	  device/lib/r3ka/setjmp.s
	  support/regression/tests/setjmp.c,
	  support/regression/tests/longjmp.c:
	  Fix setjmp/longjmp return value for Rabbits.

2024-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp:
	  Fix handling of edges in vertex removal from stack conflict graph on spill location parameter merge.

2024-06-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Fix test for ports without banked function calls.

2024-06-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3741.c:
	  Add a regression test for a reported bug that I haven't been able to reproduce locally.

2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCdflow.h:
	  Fix a z80 codegen issue in the handling of information from generalized constant propagation.

2024-06-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3740.c:
	  Fix bug #3740.

2024-05-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c:
	  Parse ZX Spectrum Next nextreg instruction.

2024-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp,
	  src/hc08/gen.c:
	  Reject boost 1.85.0.

2024-05-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Skip leading zeroes on comparisons and some increments.

2024-05-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Use information from generalized constant propagation to optimize comparisons of signed types.

2024-05-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  z80 codegen improvements.

2024-05-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp,
	  src/stm8/ralloc2.cc,
	  src/stm8/gen.c,
	  src/z80/ralloc2.cc: